--- a/src/app/shared/components/login-modal/login-modal.html
+++ b/src/app/shared/components/login-modal/login-modal.html
@@ -24,7 +24,7 @@
                 </div>
             </form>
 
-            <button class="continue">
+            <button class="continue" (click)="onContinuar()">
                 Continuar
             </button>
 
