--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -1,1 +1,21 @@
-<p>sidebar works!</p>
+<aside class="side-bar">
+    <div class="logo-wrapper">
+        <img src="favicon.ico" class="logo" alt="">
+    </div>
+
+    <div class="link-icons">
+        <div class="add">
+            <img class="add_patient" src="assets/iconos/add-patient-icon.png" alt="Agregar paciente">
+        </div>
+        <div class="view">
+            <img class="view_all" src="assets/iconos/view-all-icon.png" alt="Ver todos los pacientes">
+        </div>
+        <div class="review">
+            <img class="reviews" src="assets/iconos/reviews-icon.png" alt="Valoraciones">
+        </div>
+    </div>
+
+    <div class="user">
+        <img class="user_icon" src="assets/iconos/user-icon.png" alt="Perfil de usuario">
+    </div>
+</aside>
