--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
     --font-main: 'Poppins', sans-serif;
     --title-weight: 900;
     --subtiles-weigth: 400;
+    --hover-color: #1A7A79;
 }
 
 body{
