--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -3,19 +3,27 @@
         <img src="favicon.ico" class="logo" alt="">
     </div>
 
-    <div class="link-icons">
-        <div class="add">
-            <img class="add_patient" src="assets/iconos/add-patient-icon.png" alt="Agregar paciente">
-        </div>
-        <div class="view">
-            <img class="view_all" src="assets/iconos/view-all-icon.png" alt="Ver todos los pacientes">
-        </div>
-        <div class="review">
-            <img class="reviews" src="assets/iconos/reviews-icon.png" alt="Valoraciones">
-        </div>
-    </div>
+    <nav class="link-icons">
+        <a class="nav-item">
+            <img class="icon" src="assets/iconos/add-patient-icon.png" alt="">
+            <span class="label">Agregar</span>
+        </a>
 
-    <div class="user">
-        <img class="user_icon" src="assets/iconos/user-icon.png" alt="Perfil de usuario">
+        <a class="nav-item active">
+            <img class="icon" src="assets/iconos/view-all-icon.png" alt="">
+            <span class="label">Pacientes</span>
+        </a>
+
+        <a class="nav-item">
+            <img class="icon" src="assets/iconos/reviews-icon.png" alt="">
+            <span class="label">Valoraciones</span>
+        </a>
+    </nav>
+
+    <div class="user-section">
+        <a class="nav-item">
+            <img class="icon" src="assets/iconos/user-icon.png" alt="">
+            <span class="label">Perfil</span>
+        </a>
     </div>
 </aside>
