ahora si y a esta chida la sidebar

--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -5,24 +5,24 @@
 
     <nav class="link-icons">
         <a class="nav-item">
-            <img class="icon" src="assets/iconos/add-patient-icon.png" alt="">
+            <img class="add_patient" src="assets/iconos/add-patient-icon.png" alt="">
             <span class="label">Agregar</span>
         </a>
 
-        <a class="nav-item active">
-            <img class="icon" src="assets/iconos/view-all-icon.png" alt="">
+        <a class="nav-item">
+            <img class="view_all" src="assets/iconos/view-all-icon.png" alt="">
             <span class="label">Pacientes</span>
         </a>
 
         <a class="nav-item">
-            <img class="icon" src="assets/iconos/reviews-icon.png" alt="">
+            <img class="reviews" src="assets/iconos/reviews-icon.png" alt="">
             <span class="label">Valoraciones</span>
         </a>
     </nav>
 
     <div class="user-section">
         <a class="nav-item">
-            <img class="icon" src="assets/iconos/user-icon.png" alt="">
+            <img class="user_icon" src="assets/iconos/user-icon.png" alt="">
             <span class="label">Perfil</span>
         </a>
     </div>
