--- a/src/app/shared/components/sidebar/sidebar.css
+++ b/src/app/shared/components/sidebar/sidebar.css
@@ -27,21 +27,31 @@
     flex-shrink: 0;
 }
 
-.logo {
+.logo, .view_all, .reviews {
+    width: 35px;
+    height: 35px;
+}
+
+.user_icon{
+    width: 40px;
+    height: 40px;
+}
+
+.add_patient{
     width: 30px;
     height: 30px;
 }
 
 .link-icons {
     flex: 1;
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
 .user-section {
-    width: 100%;
+    width: 90%;
     padding: 0 10px;
     margin-top: auto;
 }
@@ -49,25 +59,19 @@
 .nav-item {
     display: flex;
     align-items: center;
-    padding: 12px 15px;
-    border-radius: 8px;
+    padding: 8px 10px;
+    border-radius: 10px;
     cursor: pointer;
     transition: all 0.2s ease;
     text-decoration: none;
     color: white;
     white-space: nowrap;
     min-height: 50px;
+    margin-left: 10px;
 }
 
 .nav-item:hover {
     background-color: var(--hover-color);
-}
-
-.nav-item .icon {
-    width: 24px;
-    height: 24px;
-    min-width: 24px;
-    flex-shrink: 0;
 }
 
 .nav-item .label {
