filter, searchbar and card patient

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<main class="dashboard">
+    <header class="title-container">
+        <h2 class="title">Pacientes</h2>
+    </header>
+
+    <div class="search-content">
+        <app-filter></app-filter>
+        <app-search-bar></app-search-bar>
+    </div>
+
+    <section class="cards-container">
+        <app-patient-card></app-patient-card>
+    </section>
+
+</main>
+
