cambios en el responsive

--- a/src/app/pages/dashboard/components/filter/filter.html
+++ b/src/app/pages/dashboard/components/filter/filter.html
@@ -1,5 +1,8 @@
 <div class="dropdown">
-    <button class="dropbtn">Filtrar por...</button>
+    <button class="dropbtn">
+        Filtrar por...
+        <i class="fa fa-chevron-down"></i>
+    </button>
     <div class="dropdown_content">
         <a href="#">Recién Agregado</a>
         <a href="#">De la A a la Z</a>
