--- a/src/app/pages/dashboard/components/patient-card/patient-card.html
+++ b/src/app/pages/dashboard/components/patient-card/patient-card.html
@@ -1,1 +1,24 @@
-<p>patient-card works!</p>
+<article class="patient-card">
+    <header class="menu" (click)="toggleMenu($event)">
+        <button class="menu-trigger" aria-label="Opciones">
+            <i class="fa fa-ellipsis-vertical"></i>
+        </button>
+        <div class="dropdown-menu" [class.show]="menuOpen">
+            <a href="#" class="menu-item" (click)="onEdit($event)">
+                <span>Editar paciente</span>
+            </a>
+            <a href="#" class="menu-item delete" (click)="onDelete($event)">
+                <span>Marcar como inactivo</span>
+            </a>
+        </div>
+    </header>
+
+    <figure class="patient-avatar">
+        <img src="{{patient.avatar}}" alt="Avatar de Jorge Antonio Axayacatl Gómez Escamilla">
+    </figure>
+
+    <div class="patient-info">
+        <h3 class="name">{{patient.nombre}}</h3>
+        <p class="lastname">{{patient.apellidos}}</p>
+    </div>
+</article>
