--- a/src/app/pages/dashboard/dashboard.css
+++ b/src/app/pages/dashboard/dashboard.css
@@ -7,10 +7,14 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 24px;
 }
 
-@media screen {
-    
+.cards-container{
+    margin-top: 24px;
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
 }
+
 
