routes on sidebar

--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -4,12 +4,12 @@
     </div>
 
     <nav class="link-icons">
-        <a class="nav-item">
+        <a class="nav-item" routerLink="/patient-register">
             <img class="add_patient" src="assets/iconos/add-patient-icon.png" alt="">
             <span class="label">Agregar</span>
         </a>
 
-        <a class="nav-item">
+        <a class="nav-item" routerLink="/dashboard">
             <img class="view_all" src="assets/iconos/view-all-icon.png" alt="">
             <span class="label">Pacientes</span>
         </a>
