cambios en diseño del titulo

--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<main class="dashboard">
+<section class="dashboard">
     <header class="title-container">
         <h2 class="title">Pacientes</h2>
     </header>
@@ -13,4 +13,4 @@
         </app-patient-card>
     </section>
 
-</main>
+</section>
