--- a/src/app/pages/dashboard/dashboard.css
+++ b/src/app/pages/dashboard/dashboard.css
@@ -1,6 +1,16 @@
 .dashboard{
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
+}
+
+.title{
+    font-size: 50px;
+}
+
+.title-container{
+    margin-top: -50px;
+    margin-bottom: -24px;
 }
 
 .search-content{
