--- a/src/app/pages/patient-register/patient-register.html
+++ b/src/app/pages/patient-register/patient-register.html
@@ -1,1 +1,8 @@
-<p>patient-register works!</p>
+<section class="register-wrap">
+    <header class="title-container">
+        <h2 class="title">Registro Paciente</h2>
+    </header>
+
+
+
+</section>
