--- a/src/app/pages/patient-register/patient-register.html
+++ b/src/app/pages/patient-register/patient-register.html
@@ -3,6 +3,12 @@
         <h2 class="title">Registro Paciente</h2>
     </header>
 
+    <div class="step-indicator">
+        <app-step-indicator></app-step-indicator>
+    </div>
 
+    <article class="form">
+        <app-form></app-form>
+    </article>
 
 </section>
