--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -1,6 +1,6 @@
 <aside class="side-bar">
     <div class="logo-wrapper">
-        <img src="favicon.ico" class="logo" alt="">
+        <!-- <img src="favicon.ico" class="logo" alt=""> -->
     </div>
 
     <nav class="link-icons">
