inidicador de pasos en el formulario en share

--- a/src/app/pages/patient-register/patient-register.html
+++ b/src/app/pages/patient-register/patient-register.html
@@ -11,4 +11,11 @@
         <app-form></app-form>
     </article>
 
+    <div class="next-btn">
+        <button class="next">
+            Siguiente
+            <i class="fa fa-arrow-right arrow" aria-hidden="true"></i>
+        </button>
+    </div>
+
 </section>
