--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -14,14 +14,14 @@
             <span class="label">Pacientes</span>
         </a>
 
-        <a class="nav-item">
+        <a class="nav-item" routerLink="/reviews">
             <img class="reviews" src="assets/iconos/reviews-icon.png" alt="">
             <span class="label">Valoraciones</span>
         </a>
     </nav>
 
     <div class="user-section">
-        <a class="nav-item">
+        <a class="nav-item" routerLink="/user-profile">
             <img class="user_icon" src="assets/iconos/user-icon.png" alt="">
             <span class="label">Perfil</span>
         </a>
