--- a/src/app/pages/user-profile/user-profile.html
+++ b/src/app/pages/user-profile/user-profile.html
@@ -5,11 +5,11 @@
 
     <article class="profile-content">
         <div class="personal-info">
-            <app-profile-info></app-profile-info>
+            <app-profile-info [title] = "'Información personal'" [data] = "personalInfo"></app-profile-info>
         </div>
 
         <div class="profesional-info">
-            <app-profesional-info></app-profesional-info>
+            <app-profile-info [title] = "'Información profesional'" [data] = "profesionalInfo"></app-profile-info>
         </div>
 
     </article>
