--- a/src/app/pages/patient-register/patient-register.html
+++ b/src/app/pages/patient-register/patient-register.html
@@ -7,12 +7,12 @@
         <div class="step-indicator">
             <app-step-indicator></app-step-indicator>
         </div>
-        <app-form></app-form>
+            <app-reusable-form></app-reusable-form>
     </article>
 
     <div class="next-btn">
         <button class="next">
-            Siguiente 
+            Siguiente
         </button>
     </div>
 
