--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -9,8 +9,9 @@
     </div>
 
     <section class="cards-container">
-        <app-patient-card *ngFor="let patient of filteredPatients" [patient]="patient">
-        </app-patient-card>
+        @for (patient of filteredPatients; track patient.id){
+        <app-patient-card [patient]="patient"></app-patient-card>
+    }
     </section>
 
 </section>
