--- a/src/app/pages/patient-register/patient-register.html
+++ b/src/app/pages/patient-register/patient-register.html
@@ -7,7 +7,9 @@
         <div class="step-indicator">
             <app-step-indicator></app-step-indicator>
         </div>
-            <app-reusable-form></app-reusable-form>
+        <div class="form">
+            <app-reusable-form [title]="'Información personal'" [formItems]="personalInfoItems"></app-reusable-form>
+        </div>
     </article>
 
     <div class="next-btn">
