--- a/src/app/pages/patient-register/patient-register.css
+++ b/src/app/pages/patient-register/patient-register.css
@@ -1,10 +1,10 @@
 .register-wrap {
     display: flex;
     flex-direction: column;
-    max-width: 700px;
-    height: 100%;
+    max-width: 50%;
     justify-content: space-between;
     margin-top: -12px;
+    max-height: 50%;
 }
 
 .title-container {
