--- a/src/app/shared/components/step-indicator/step-indicator.html
+++ b/src/app/shared/components/step-indicator/step-indicator.html
@@ -1,14 +1,15 @@
 <div class="progress-stepper">
-  <ng-container *ngFor="let step of [].constructor(totalSteps); let i = index">
+  @for (step of steps; track $index) {
     <div 
       class="step" 
-      [class.active]="i + 1 <= currentStep"
-      [class.current]="i + 1 === currentStep">
+      [class.active]="$index + 1 <= currentStep"
+      [class.current]="$index + 1 === currentStep">
     </div>
-    <div 
-      class="step-line" 
-      *ngIf="i < totalSteps - 1"
-      [class.active]="i + 1 < currentStep">
-    </div>
-  </ng-container>
+    @if ($index < totalSteps - 1) {
+      <div 
+        class="step-line" 
+        [class.active]="$index + 1 < currentStep">
+      </div>
+    }
+  }
 </div>
