css y html de formulario ya quedo

--- a/src/app/shared/components/reusable-form/reusable-form.html
+++ b/src/app/shared/components/reusable-form/reusable-form.html
@@ -31,4 +31,11 @@
         </div>
         }
     </form>
+
+    <div class="button-container">
+        <button class="add">
+            <i class="fa fa-plus"></i>
+            Agregar
+        </button>
+    </div>
 </article>
