--- a/src/app/pages/patient-register/patient-register.css
+++ b/src/app/pages/patient-register/patient-register.css
@@ -26,11 +26,33 @@
     margin-bottom: 32px;
 }
 
-.next-btn {
+.buttons-container {
     display: flex;
+    flex-direction: row;
+    gap: 2%;
     justify-content: flex-end;
     align-items: flex-end;
 }
+
+.back {
+    padding: 18px 32px;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(0, 0, 0);
+    background-color: #E6E6E6;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.215);
+}
+
+.back:hover {
+    box-shadow: 0 4px 8px rgba(118, 118, 118, 0.3);
+}
+
 
 .next {
     padding: 18px 32px;
@@ -44,15 +66,10 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.215);
 }
 
 .next:hover {
     background-color: var(--primary-color);
     box-shadow: 0 4px 8px rgba(93, 171, 168, 0.3);
-}
-
-.next:active {
-    transform: translateY(0);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
