--- a/src/app/shared/components/reusable-form/reusable-form.css
+++ b/src/app/shared/components/reusable-form/reusable-form.css
@@ -4,6 +4,28 @@
   width: 100%;
 }
 
+.button-container {
+  display: flex;
+  margin-top: 24px;
+  align-items: flex-end;
+  justify-items: flex-end;
+}
+
+.add {
+  padding: 15px 32px;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  background-color: var(--tertiary-color);
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+
 .title h2 {
   font-size: 32px;
   font-weight: 600;
@@ -28,7 +50,8 @@
   margin-bottom: 6px;
 }
 
-.form-input, .form-select{
+.form-input,
+.form-select {
   padding: 12px 14px;
   font-size: 14px;
   border: 1px solid #e0e0e0;
