--- a/src/app/shared/components/login-modal/login-modal.html
+++ b/src/app/shared/components/login-modal/login-modal.html
@@ -14,7 +14,7 @@
 
             <form action="" class="form">
                 <div class="form-group">
-                    <label for="email">Correo electrónico @</label>
+                    <label for="email">Correo electrónico</label>
                     <input type="email" id="email" placeholder="Ingrese" class="form-input">
                 </div>
 
