--- a/src/app/pages/auth/register/register.html
+++ b/src/app/pages/auth/register/register.html
@@ -1,4 +1,6 @@
-<app-form></app-form>
-<div class="img-container">
-  <img src="assets/otros/doctors-register.png" class="img">
-</div>
+<main>
+  <app-form></app-form>
+  <div class="img-container">
+    <img src="assets/otros/doctors-register.png" class="img">
+  </div>
+</main>
