--- a/src/app/shared/components/button/button.html
+++ b/src/app/shared/components/button/button.html
@@ -1,1 +1,1 @@
-<button [type]="btnConfig.type" [name]="btnConfig.name" [class]="btnConfig.context">{{btnConfig.text}}</button>
+<button [type]="type" [name]="name" [class]="context">{{text}}</button>
