--- a/src/app/landing/components/hero-section/hero-section.html
+++ b/src/app/landing/components/hero-section/hero-section.html
@@ -2,7 +2,7 @@
     <div class="hero-text">
         <h1 class="hero-title">Mejor control, mejor <span class="highlight">médico</span></h1>
         <p class="hero-subtitle">Organiza tus expedientes bariátricos en unos simples pasos.</p>
-        <a href="./ruta/a/registro" class="hero-cta-button">Comienza Ahora</a>
+        <a (click)="navigateToRegister()" class="hero-cta-button">Comienza Ahora</a>
     </div>
 
     <div class="hero-image">
