--- a/src/app/shared/components/login-modal/login-modal.html
+++ b/src/app/shared/components/login-modal/login-modal.html
@@ -30,7 +30,7 @@
 
             <div class="register">
                 <p>¿No tienes una cuenta? </p>
-                <a href="#" (click)="closeModal()">Regístrate</a>
+                <a routerLink="/user-register" (click)="closeModal()">Regístrate</a>
             </div>
 
         </section>
