--- a/src/app/pages/auth/register/components/register-form-buttons/register-form-buttons.css
+++ b/src/app/pages/auth/register/components/register-form-buttons/register-form-buttons.css
@@ -1,8 +1,16 @@
-:host(){
+:host{
   width: 100%;
   display: flex;
-  flex-direction: row;
+  margin-top: 4%;
+}
+
+.step-one{
+  width: 100%;
+  display: flex;
   justify-content: space-between;
 }
 
+.step-two{
+  width: 100%;
+}
 
