--- a/src/app/pages/auth/register/components/form/form.css
+++ b/src/app/pages/auth/register/components/form/form.css
@@ -8,7 +8,7 @@
 h1{
   color: var(--primary-color);
   text-align: center;
-  font-size: xx-large;
+  font-size: xxx-large;
   padding-left: 0;
   margin: 0;
 }
@@ -16,4 +16,11 @@ h1{
 section{
   height: 90%;
   width: 80%;
+}
+
+header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
