--- a/src/app/shared/components/button/button.css
+++ b/src/app/shared/components/button/button.css
@@ -1,10 +1,10 @@
 button{
   border:none;
-  height: 7vh;
-  width: 8vw;
+  height: 8vh;
+  width: 14vw;
   border-radius: 15px;
   font-weight: bolder;
-  font-size: medium;
+  font-size: larger;
   transition: 100ms al ease-out;
 }
 
@@ -14,6 +14,7 @@ button:hover{
 
 .default:hover{
   background-color: #7e7e7e;
+  color: white;
 }
 
 .continue, .primary{
