--- a/src/app/shared/components/button/button.html
+++ b/src/app/shared/components/button/button.html
@@ -1,1 +1,1 @@
-<button [type]="type" [name]="name" [class]="context">{{text}}</button>
+<button [type]="type" [name]="name" [class]="context" (click)="onClick()">{{text}}</button>
