lista de consultas añadida, cambios extras menores

--- a/src/app/layout/views-layout/views-layout.css
+++ b/src/app/layout/views-layout/views-layout.css
@@ -1,5 +1,5 @@
 .container {
-  display: flex; 
+  display: flex;
   min-height: 100vh;
   flex-direction: row;
 }
@@ -7,7 +7,7 @@
 .sidebar{
   display: flex;
   padding: 40px 0 40px 0px;
-  position: fixed; 
+  position: fixed;
   min-height: 500px;
   z-index: 100;
   transition: all 0.3s ease;
@@ -16,7 +16,7 @@
 app-sidebar{
   width: 100px;
   margin-left: 40px;
-  transition: width 0.3 ease;
+  transition: width 0.3s ease;
 }
 
 .container.sidebar-expanded app-sidebar{
@@ -25,10 +25,10 @@ app-sidebar{
 
 .main-content {
   flex: 1;
-  margin-left: 180px;  
+  margin-left: 180px;
   padding:  40px 0 40px 0px;;
   max-height: 100vh;
-  transition: margin-left 0.3 ease;
+  transition: margin-left 0.3s ease;
 }
 
 .container.container.sidebar-expanded .main-content{
