--- a/src/app/pages/auth/register/components/form/form.css
+++ b/src/app/pages/auth/register/components/form/form.css
@@ -8,7 +8,7 @@
 h1{
   color: var(--primary-color);
   text-align: center;
-  font-size: xxx-large;
+  font-size: xx-large;
   padding-left: 0;
   margin: 0;
 }
