--- a/src/app/pages/auth/register/components/part-one/part-one.html
+++ b/src/app/pages/auth/register/components/part-one/part-one.html
@@ -1,3 +1,3 @@
-<app-reusable-form [formItems]="registerPartOne"></app-reusable-form>
+<app-reusable-form [formItems]="registerPartOne" class="input-form-register"></app-reusable-form>
 <app-register-form-buttons [step]="step" (nextStep)="onNextStep()"></app-register-form-buttons>
 <app-register-form-footer></app-register-form-footer>
