--- a/src/app/pages/auth/register/components/part-two/part-two.html
+++ b/src/app/pages/auth/register/components/part-two/part-two.html
@@ -1,3 +1,3 @@
-<app-reusable-form [formItems]="registerPartTwo"></app-reusable-form>
+<app-reusable-form [formItems]="registerPartTwo" class="input-form-register"></app-reusable-form>
 <app-register-form-buttons [step]="step" (register)="onRegister()" (prevStep)="onPrevStep()"></app-register-form-buttons>
 <app-register-form-footer [step]="step" (prevStep)="onPrevStep()"></app-register-form-footer>
