--- a/src/app/pages/patient/patient.html
+++ b/src/app/pages/patient/patient.html
@@ -1,1 +1,10 @@
-<p>patient works!</p>
+<h1>Paciente</h1>
+<main>
+  <div class="info-wrapper">
+    <app-info></app-info>
+    <app-stats></app-stats>
+  </div>
+  <div class="list-wrapper">
+    <app-appointments></app-appointments>
+  </div>
+</main>
