--- a/src/app/pages/patient/components/info/main-info/main-info.css
+++ b/src/app/pages/patient/components/info/main-info/main-info.css
@@ -4,8 +4,8 @@
 }
 
 :host{
-  height: 96%;
-  width: 96%;
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns:100%;
   grid-template-rows: 25px 1fr 1fr;
@@ -13,6 +13,7 @@
   border-radius: 20px;
   box-shadow: 5px 5px 5px rgba(0,0,0,0.15);
   border: 1px solid rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
 }
 
 
