--- a/src/app/pages/patient/components/info/side-info/side-info.css
+++ b/src/app/pages/patient/components/info/side-info/side-info.css
@@ -4,8 +4,8 @@
 }
 
 :host{
-  height: 96%;
-  width: 96%;
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns:100%;
   grid-template-rows: 25px 1fr;
@@ -14,6 +14,7 @@
   border-radius: 20px;
   box-shadow: 5px 5px 5px rgba(0,0,0,0.15);
   border: 1px solid rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
 }
 
 .card-header{
@@ -67,4 +68,5 @@ hr{
   display: grid;
   grid-template-columns: 30% 70%;
   grid-template-rows: 100%;
+  align-items: center;
 }
