--- a/src/app/pages/patient/components/appointments/appointments.css
+++ b/src/app/pages/patient/components/appointments/appointments.css
@@ -23,6 +23,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 8px;
   overflow-y: auto;
   box-sizing: border-box;
