--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -10,7 +10,7 @@
 
     <section class="cards-container">
         @for (patient of filteredPatients; track patient.id){
-        <app-patient-card [patient]="patient"></app-patient-card>
+        <app-patient-card [patient]="patient" routerLink="/patient"></app-patient-card>
     }
     </section>
 
