environment, interfaces for patients and patient-register on its way

--- a/src/app/pages/patient-register/patient-register.html
+++ b/src/app/pages/patient-register/patient-register.html
@@ -25,12 +25,12 @@
             } @else if (currentStep === 3) {
                 <app-reusable-form 
                     [title]="'Enfermedades Actuales'" 
-                    [formItems]="illness">
+                    [formItems]="diseases">
                 </app-reusable-form>
             } @else if (currentStep === 4) {
                 <app-reusable-form 
                     [title]="'Antecedentes médicos'" 
-                    [formItems]="records">
+                    [formItems]="medicalHistories">
                 </app-reusable-form>
             }
         </div>
