--- a/src/app/shared/components/reusable-form/reusable-form.html
+++ b/src/app/shared/components/reusable-form/reusable-form.html
@@ -3,30 +3,43 @@
       <h2>{{ title }}</h2>
     </div>
 
-    <form class="form">
+    <form class="form" [formGroup]="formGroup">
         @for (item of formItems; track item.name) {
 
         <div class="input-group">
             @if (item.type === 'text' || item.type === 'tel' || item.type === 'date' || item.type === 'password' || item.type === 'email') {
 
-            <label [for]="item.name" class="form-label">{{ item.label }}</label>
+            <label [for]="item.name" class="form-label">{{ item.label || item.placeholder }}</label>
 
-            <input [id]="item.name" [type]="item.type" [placeholder]="item.placeholder" [name]="item.name "
-                [required]="item.required" class="form-input {{classHelper}}}"/>
+            <input 
+                [id]="item.name" 
+                [type]="item.type" 
+                [placeholder]="item.placeholder" 
+                [formControlName]="item.name"
+                class="form-input {{classHelper}}"
+            />
 
             } @else if (item.type === 'select') {
 
-            <label [for]=" item.name" class="form-label">{{item.label}}</label>
+            <label [for]="item.name" class="form-label">{{ item.label || item.placeholder }}</label>
 
-            <select [id]="item.name" [name]="item.name" [required]="item.required" class="form-select {{classHelper}}">
-
-                <option value="" disabled selected>Seleccionar</option>
+            <select 
+                [id]="item.name" 
+                [formControlName]="item.name" 
+                class="form-select {{classHelper}}"
+            >
+                <option value="" disabled>Seleccionar</option>
 
                 @for (option of item.options; track option) {
-
                 <option [value]="option">{{ option }}</option>
                 }
             </select>
+            }
+
+            @if (formGroup.get(item.name)?.invalid && formGroup.get(item.name)?.touched) {
+            <div class="error-message">
+                Campo requerido
+            </div>
             }
         </div>
         }
