--- a/src/app/pages/auth/register/components/register-form-buttons/register-form-buttons.html
+++ b/src/app/pages/auth/register/components/register-form-buttons/register-form-buttons.html
@@ -1,10 +1,10 @@
 @if (step === 1){
   <div class="step-one">
-    <app-button [type]="'button'" [name]="'cancel'" [context]="'default'" [text]="'Cancelar'" (click)="onCancel()" ></app-button>
-    <app-button [type]="'submit'" [name]="'continue'" [context]="'continue'" [text]="'Continuar'" (click)="onContinue()"></app-button>
+    <app-button [type]="'button'" [name]="'cancel'" [context]="'default'" [text]="'Cancelar'" (pressed)="onCancel()" ></app-button>
+    <app-button [type]="'button'" [name]="'continue'" [context]="'continue'" [text]="'Continuar'" (pressed)="onContinue()"></app-button>
   </div>
 } @else {
   <div class="step-two">
-    <app-button [type]="'submit'" [name]="'register'" [context]="'primary longButton'" [text]="'Registrarse'" (click)="onRegister()"></app-button>
+    <app-button [type]="'button'" [name]="'register'" [context]="'primary longButton'" [text]="'Registrarse'" (pressed)="onRegister()"></app-button>
   </div>
 }
