--- a/src/app/pages/patient-register/patient-register.css
+++ b/src/app/pages/patient-register/patient-register.css
@@ -73,3 +73,33 @@
     background-color: var(--primary-color);
     box-shadow: 0 4px 8px rgba(93, 171, 168, 0.3);
 }
+
+.add-btn {
+    padding: 12px 16px;
+    font-size: 14px;
+    margin-top: 10px;
+    font-weight: 600;
+    color: white;
+    background-color: var(--tertiary-color);
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.remove-btn {
+    padding: 12px 16px;
+    font-size: 14px;
+    margin-top: 10px;
+    font-weight: 600;
+    color: white;
+    background-color:rgba(0, 0, 0, 0.3);
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
