--- a/src/app/pages/patient-register/patient-register.html
+++ b/src/app/pages/patient-register/patient-register.html
@@ -5,50 +5,100 @@
 
     <article class="form">
         <div class="step-indicator">
-            <app-step-indicator 
-                [currentStep]="currentStep" 
-                [totalSteps]="totalSteps">
+            <app-step-indicator [currentStep]="currentStep" [totalSteps]="totalSteps">
             </app-step-indicator>
         </div>
 
         <div class="form-content">
             @if (currentStep === 1) {
-                <app-reusable-form 
-                    [title]="'Información Personal'" 
-                    [formItems]="personalInfo"
-                    [formGroup]="patientForm">
-                </app-reusable-form>
+            <app-reusable-form 
+                [title]="'Información Personal'" 
+                [formItems]="personalInfo" 
+                [formGroup]="patientForm">
+            </app-reusable-form>
+
             } @else if (currentStep === 2) {
-                <app-reusable-form 
-                    [title]="'Alergias'" 
-                    [formItems]="allergiesItems"
-                    [formGroup]="allergiesForm">
-                </app-reusable-form>
+            <div class="dynamic-container">
+                @for(allergyGroup of allergies.controls; track $index){
+                <div class="form-item-wrapper">
+                    <app-reusable-form 
+                        [title]="'Alergia'" 
+                        [formItems]="allergiesItems" 
+                        [formGroup]="$any(allergyGroup)">
+                    </app-reusable-form>
+                    
+                    @if (allergies.length > 1) {
+                    <button type="button" class="remove-btn" (click)="removeAllergy($index)">
+                        <i class="fa fa-trash"></i> Eliminar
+                    </button>
+                    }
+                </div>
+                }
+
+                <button type="button" class="add-btn" (click)="addAllergy()">
+                    <i class="fa fa-plus"></i> Agregar
+                </button>
+            </div>
+
             } @else if (currentStep === 3) {
-                <app-reusable-form 
-                    [title]="'Enfermedades Actuales'" 
-                    [formItems]="diseasesItems"
-                    [formGroup]="diseasesForm">
-                </app-reusable-form>
+            <div class="dynamic-container">
+                @for(diseaseGroup of diseases.controls; track $index){
+                <div class="form-item-wrapper">
+                    <app-reusable-form 
+                        [title]="'Enfermedad'" 
+                        [formItems]="diseasesItems"
+                        [formGroup]="$any(diseaseGroup)">
+                    </app-reusable-form>
+                    
+                    @if (diseases.length > 1) {
+                    <button type="button" class="remove-btn" (click)="removeDisease($index)">
+                        <i class="fa fa-trash"></i> Eliminar
+                    </button>
+                    }
+                </div>
+                }
+
+                <button type="button" class="add-btn" (click)="addDisease()">
+                    <i class="fa fa-plus"></i> Agregar
+                </button>
+            </div>
+
             } @else if (currentStep === 4) {
-                <app-reusable-form 
-                    [title]="'Antecedentes médicos'" 
-                    [formItems]="medicalHistoriesItems"
-                    [formGroup]="medicalHistoriesForm">
-                </app-reusable-form>
+            <div class="dynamic-container">
+                @for(medicalHistoryGroup of medicalHistories.controls; track $index){
+                <div class="form-item-wrapper">
+                    <app-reusable-form 
+                        [title]="'Antecedentes'" 
+                        [formItems]="medicalHistoriesItems"
+                        [formGroup]="$any(medicalHistoryGroup)">
+                    </app-reusable-form>
+                    
+                    @if (medicalHistories.length > 1) {
+                    <button type="button" class="remove-btn" (click)="removeMedicalHistory($index)">
+                        <i class="fa fa-trash"></i> Eliminar
+                    </button>
+                    }
+                </div>
+                }
+
+                <button type="button" class="add-btn" (click)="addMedicalHistory()">
+                    <i class="fa fa-plus"></i> Agregar
+                </button>
+            </div>
             }
         </div>
     </article>
 
     <div class="buttons-container">
         @if (!isFirstStep()) {
-            <button type="button" class="back" (click)="previousStep()">
-                <i class="fa fa-arrow-left"></i>
-                Anterior
-            </button>
+        <button type="button" class="back" (click)="previousStep()">
+            <i class="fa fa-arrow-left"></i>
+            Anterior
+        </button>
         }
-        
-        <button type="button" class="next" (click)="isLastStep() ? submitAllData() : nextStep()" [disabled]="isSubmitted">
+
+        <button type="button" class="next" (click)="isLastStep() ? submitAllData() : nextStep()"
+            [disabled]="isSubmitted">
             @if (isLastStep()) {
                 {{ isSubmitted ? 'Enviando...' : 'Finalizar' }}
                 <i class="fa fa-check"></i>
