formulario de registro unificado y modificado para formGroup

--- a/src/app/pages/auth/register/components/form/form.html
+++ b/src/app/pages/auth/register/components/form/form.html
@@ -3,10 +3,24 @@
     <app-step-indicator [currentStep]="currentStep" [totalSteps]="totalSteps"></app-step-indicator>
     <h1>Crear cuenta</h1>
   </header>
-  @if (currentStep === 1){
-    <app-part-one [step]="currentStep" (nextStep)="onPartOneNext($event)"></app-part-one>
-  } @else {
-    <app-part-two [step]="currentStep" (prevStep)="previousStep()" (register)="onPartTwoRegister($event)"></app-part-two>
-  }
+  <article class="form">
+    <div class="form-content">
+      @if (currentStep === 1){
+        <app-reusable-form [formItems]="registerPartOne" [formGroup]="userForm" class="input-form-register"></app-reusable-form>
+      } @else {
+        <app-reusable-form [formItems]="registerPartTwo" [formGroup]="userForm" class="input-form-register"></app-reusable-form>
+      }
+    </div>
+  </article>
+
+  <div class="buttons-container">
+    @if (currentStep === 1){
+      <app-register-form-buttons [step]="currentStep" (nextStep)="onPartOneNext()"></app-register-form-buttons>
+      <app-register-form-footer [step]="currentStep"></app-register-form-footer>
+    } @else {
+      <app-register-form-buttons [step]="currentStep" (register)="onPartTwoRegister()"></app-register-form-buttons>
+      <app-register-form-footer [step]="currentStep" (prevStep)="previousStep()"></app-register-form-footer>
+    }
+  </div>
 </section>
 
