css de modal de login modificado para su vista individual

--- a/src/app/shared/components/login-modal/login-modal.css
+++ b/src/app/shared/components/login-modal/login-modal.css
@@ -179,3 +179,9 @@ button {
     transform: translateY(-1px);
     box-shadow: 0 4px 8px rgba(0, 86, 179, 0.3);
 }
+
+:host(.login-view){
+  .close-button{
+    display: none;
+  }
+}
